--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="/index.html" class="nav__logo">
+            <a href="../../index.html" class="nav__logo">
                 <img src="./assets/img/logo.png" alt="logo">
             </a>
 
