--- a/assets/html/credit.html
+++ b/assets/html/credit.html
@@ -15,7 +15,7 @@
             <div class="outer">
                 <header>
                     <div class="logo">
-                        <a href="/index.html"><img src="../img/logo.png" alt=""></a>
+                        <a href="../../index.html"><img src="../img/logo.png" alt=""></a>
                     </div>
                     <div class="time-left">
                         <time id="time">03:00</time>
