--- a/assets/html/details.html
+++ b/assets/html/details.html
@@ -21,7 +21,7 @@
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="/index.html" class="nav__logo">
+            <a href="../../index.html" class="nav__logo">
                 <img src="../img/logo.png" alt="logo">
             </a>
 
