--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
     <title>TROPICALIA</title>
 </head>
-
+<!-- Start of projetofinalt1 Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=d5e51e6e-7abe-429e-935d-e0135b3ec06e"> </script>
+<!-- End of projetofinalt1 Zendesk Widget script -->
 <body>
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
