--- a/index.html
+++ b/index.html
@@ -495,9 +495,9 @@
 
 
     <!--=============== SCROLL UP ===============-->
-    <a href="#" class="scrollup" id="scroll-up">
+<!--     <a href="#" class="scrollup" id="scroll-up">
         <i class="bx bx-up-arrow-alt scrollup__icon"></i>
-    </a>
+    </a> -->
 
     <!--=============== STYLE SWITCHER ===============-->
     <div class="style__switcher">
