--- a/index.html
+++ b/index.html
@@ -480,14 +480,14 @@
 
         <div id="div_fixa" class="flutuar" data-shrink="yes">
 
-            <a href="" target="_blank">
+<!--             <a href="" target="_blank">
 
                 <div class="flex_itens">
                     <a href="https://wa.me/5534997128798?text=Ol%C3%A1%2C+Tudo+bem%3F" target="_blank"><img
                             src="./assets/img/whatsapp.png" alt="Ícone do WhatsApp"></a>
                     <!-- <span>Converse comigo</span> -->
                 </div>
-
+ -->
 
             </a>
         </div>
