--- a/assets/html/faq.html
+++ b/assets/html/faq.html
@@ -17,6 +17,10 @@
     
         <title>TROPICALIA</title>
     </head>
+
+<!-- Start of projetofinalt1 Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=d5e51e6e-7abe-429e-935d-e0135b3ec06e"> </script>
+<!-- End of projetofinalt1 Zendesk Widget script -->
 <body>
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
