--- a/assets/html/credit.html
+++ b/assets/html/credit.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="../css/Credit.css">
 </head>
 
+<!-- Start of projetofinalt1 Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=d5e51e6e-7abe-429e-935d-e0135b3ec06e"> </script>
+<!-- End of projetofinalt1 Zendesk Widget script -->
 <body>
 
     <div id="page" class="site">
