--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 </div>
 
                 <div class="nav__toggle-one" id="nav-toggle-one">
-                    <i class="bx bx-grid-alt"></i>
+                    <!-- <i class="bx bx-grid-alt"></i> -->
                 </div>
 
-                <button class="nav__toggle-one" onclick="toggleMenu()">Clique aqui</button>
+                <button class="nav__toggle-one" onclick="toggleMenu()"><i class="bx bx-grid-alt"></i></button>
                 <script>
                     function toggleMenu() {
                         const navMenu = document.querySelector('.nav__menu');
