--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <!-- <i class="bx bx-grid-alt"></i> -->
                 </div>
 
-                <button class="nav__toggle-one" onclick="toggleMenu()"><i class="bx bx-grid-alt"></i></button>
+                <button class="nav__toggle-one" id="toggle-responsive" onclick="toggleMenu()"><i class="bx bx-grid-alt"></i></button>
                 <script>
                     function toggleMenu() {
                         const navMenu = document.querySelector('.nav__menu');
