--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -146,7 +146,7 @@
 
                     <p class="about__description">
                         
-                            Temos mais de 4.000 avaliações imparciais e nossos clientes sempre confiam em nossos produtos e serviço de entrega
+                            Somos a Tropicália, uma empresa do setor da moda comprometida em oferecer produtos sustentáveis de alta qualidade. Fundada em 2018 por Sofia Santos e João Martins, nossa missão é combater o descarte inadequado de residuos têxteis no Brasil através de nossos produtos, que sempre alinhados às últimas tendências da moda, trazendo durabilidade, conforto e respeito ao melo ambiente, tornando-nos um símbolo de revolução no setor.
                     </p>
                     <div class="about__details">
                         <p class="about__details-description">
