--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -179,7 +179,7 @@
             <p class="footer__description">Naturalmente sustentável, confortavelmente elegante. </p>
 
             <div class="footer__social">
-                <a href="#" class="footer__social-link"><i class="bx bxl-whatsapp"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=5511954326376&text=Ola,%20tudo%20bem?" class="footer__social-link"><i class="bx bxl-whatsapp"></i></a>
                 <a href="#" class="footer__social-link"><i class="bx bxl-instagram-alt"></i></a>
                 <a href="#" class="footer__social-link"><i class="bx bxl-twitter"></i></a>
             </div>
