--- a/index.html
+++ b/index.html
@@ -451,11 +451,11 @@
 
                 <p class="footer__description">Naturalmente sustentável, confortavelmente elegante. </p>
 
-                <div class="footer__social">
-                    <a href="#" class="footer__social-link"><i class="bx bxl-whatsapp"></i></a>
-                    <a href="#" class="footer__social-link"><i class="bx bxl-instagram-alt"></i></a>
-                    <a href="#" class="footer__social-link"><i class="bx bxl-twitter"></i></a>
-                </div>
+            <div class="footer__social">
+                <a href="https://api.whatsapp.com/send?phone=5511954326376&text=Ola,%20tudo%20bem?" class="footer__social-link"><i class="bx bxl-whatsapp"></i></a>
+                <a href="https://www.instagram.com/juninhoseveen/" class="footer__social-link"><i class="bx bxl-instagram-alt"></i></a>
+                <a href="#" class="footer__social-link"><i class="bx bxl-twitter"></i></a>
+            </div>
             </div>
             <!-- FOOTER CONTENT 2 -->
             <div class="footer__content">
