--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -137,7 +137,7 @@
             <h3 class="breadcrumb__subtitle">Inicio > <span>Sobre nós</span></h3>
 
             <div class="about__container grid">
-                <img src="../img/sobre.png" alt="" class="about__img">
+                <img src="./assets/img/modelo.jpg" alt="modelo">
 
                 <div class="about__data">
                     <h2 class="section__title about__title">
