update erro index

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
                             <div class="home-data">
                                 <h3 class="home-subtitle">#1 DESTAQUE</h3>
-                                <h1 class="home-title">"naturalmente sustentável, <br> confortavelmente elegante!</h1>
+                                <h1 class="home-title">Naturalmente sustentável,<br> elegante!</h1>
                                 <p class="home-description">Camisetas confeccionadas com tecido desenvolvido com a fibra
                                     de coco</p>
 
