--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -141,7 +141,7 @@
 
                 <div class="about__data">
                     <h2 class="section__title about__title">
-                             Quem somos
+                             Sobre nós
                     </h2>
 
                     <p class="about__description">
